--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -2,12 +2,68 @@
 <html>
     <head>
         <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>{% block title %}Welcome!{% endblock %}</title>
-        {% block stylesheets %}{% endblock %}
-        <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
+        {% block stylesheets %}
+        <link rel="stylesheet" href="{{ asset('vendor/bootstrap/css/bootstrap.css') }}">
+        <link rel="stylesheet" href="{{ asset('css/sharedCSS.css') }}">
+        {% endblock %}
     </head>
     <body>
-        {% block body %}{% endblock %}
-        {% block javascripts %}{% endblock %}
+        <header>
+            <h1>Bienvenue sur athletik - les 1000 pas {{app.user}}</h1>
+              <nav class="navbar navbar-inverse">
+                <div class="container-fluid">
+                  <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                      <span class="icon-bar"></span>
+                      <span class="icon-bar"></span>
+                      <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="{{path('homepage')}}">WebSiteName</a>
+                  </div>
+                  <div class="collapse navbar-collapse" id="myNavbar">
+                    <ul class="nav navbar-nav">
+                      
+                      <li><a href="#">Resultats</a></li>
+                      <li><a href="#">Featured</a></li>
+                      <li class="dropdown">
+                            <a class="dropdown-toggle" data-toggle="dropdown" href="#">Events
+                            <span class="caret"></span></a>
+                            <ul class="dropdown-menu">
+                                <li><a href="#">Event 1</a></li>
+                                <li><a href="#">Event 2</a></li>
+                                <li><a href="#">Event 3</a></li>
+                            </ul>
+                      </li>       
+                    </ul>
+                    <ul class="nav navbar-nav navbar-right">
+                        {% if is_granted('ROLE_USER') %}
+                      <li><a href="{{path('fos_user_security_logout')}}"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
+                        {% else %}
+                      <li><a href="{{path('fos_user_registration_register')}}"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+                      <li><a href="{{path('fos_user_security_login')}}"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+                        {% endif %}
+                    </ul>
+                  </div>
+                </div>
+              </nav> 
+        </header>
+        {% block body %}
+            
+        {% endblock %}
+        {% block javascripts %}
+            <script src="{{ asset('vendor/bootstrap/js/jquery-3.2.1.js') }}"></script>
+            <script src="{{ asset('vendor/bootstrap/js/bootstrap.min.js') }}"></script>
+            
+        {% endblock %}
+        <footer>
+            <div class="panel panel-info">
+                <div class="panel-body panel-info">
+                copyright machin truc et bidule
+                </div>
+            </div>
+        </footer>
+        
     </body>
 </html>
