--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -11,10 +11,14 @@
     </head>
     <body>
         <header>
-            <h1>Bienvenue sur athletik - les 1000 pas {{app.user}}</h1>
+            {% if is_granted('ROLE_USER') %}
+                <h1>Bienvenue sur Athletik {{app.user}}</h1>
+            {% else %}
+                <h1>Athletik - les 1000 pas</h1> 
+            {% endif %}
               <nav class="navbar navbar-inverse">
                 <div class="container-fluid">
-                  <div class="navbar-header">
+                  <div class="navbar-header row">
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
                       <span class="icon-bar"></span>
                       <span class="icon-bar"></span>
@@ -25,15 +29,15 @@
                   <div class="collapse navbar-collapse" id="myNavbar">
                     <ul class="nav navbar-nav">
                       
-                      <li><a href="#">Resultats</a></li>
-                      <li><a href="#">Featured</a></li>
+                      <li><a href="{{path('results')}}">Resultats</a></li>
+                      <li><a href="{{path('featured')}}">Featured</a></li>
                       <li class="dropdown">
                             <a class="dropdown-toggle" data-toggle="dropdown" href="#">Events
                             <span class="caret"></span></a>
                             <ul class="dropdown-menu">
-                                <li><a href="#">Event 1</a></li>
-                                <li><a href="#">Event 2</a></li>
-                                <li><a href="#">Event 3</a></li>
+                                {% for event in events %}
+                                    <li><a href="{{path('event', {'meetingName': event.name|join})}}">{{event.name}}</a></li>
+                                {% endfor %}
                             </ul>
                       </li>       
                     </ul>
@@ -57,7 +61,7 @@
             <script src="{{ asset('vendor/bootstrap/js/bootstrap.min.js') }}"></script>
             
         {% endblock %}
-        <footer>
+        <footer class=''>
             <div class="panel panel-info">
                 <div class="panel-body panel-info">
                 copyright machin truc et bidule
