--- a/web/css/sharedCSS.css
+++ b/web/css/sharedCSS.css
@@ -1,1 +1,11 @@
 div {border: thin solid black;}
+#featured {height: auto}
+img.avatar {}
+
+div.gogol{
+    margin-bottom: 5px;
+    margin-top: 5px !important   
+}
+
+li {display: flex !important; align-items: center; justify-content: flex-start}
+.featuredInscrit {margin-left: 5px;}
