--- a/app/Resources/views/pages/results.html.twig
+++ b/app/Resources/views/pages/results.html.twig
@@ -5,12 +5,14 @@
     <div class="container">
         
             {% for event in events %}
-                <div class ="col-xs-12 col-sm-6 col-md-3 col-lg-2">
+                <div class ="resultcol col-xs-12 col-sm-6 col-md-3 col-lg-2">
                     <h4 class="text-center">{{ event.name }}</h4>
                     <ul class="list-group">
-                        <li class="list-group-item-heading">Coureur<span class="badge">points</span></li>
+                        <li class="resultli list-group-item-heading">Coureur<span class="badge">points</span></li>
                         {% for resultat in results %}
-                        <li class="list-group-item">{{resultat.athlete.firstname}}<span class="badge pull-right">{{resultat.points}}</span></li>
+                            {% if resultat.meeting.id == event.id%}
+                                <li class="row resultli list-group-item justify-content-between"><div class="divli ">{{resultat.athlete.firstname}}<span class="badge">{{resultat.points}}</span></div></li>
+                            {% endif %}
                         {%endfor%}
                     </ul>
                     
