--- a/app/Resources/views/pages/featured.html.twig
+++ b/app/Resources/views/pages/featured.html.twig
@@ -14,7 +14,7 @@
                     <dt>Date:</dt>
                     <dl>{{featured.0.date|date('d,m,Y')}}</dl>
                 </dl>
-                <a href="" class='btn btn-success' role='button'>Participer</a>
+                <a href="{{path('inscription',{'meetingName': featured.0.name})}}" class='btn btn-success' role='button'>Participer</a>
             </div>        
             </div>
             <div class="col-xs-6 col-sm-5 col-lg-3 text-center">
