--- a/web/css/sharedCSS.css
+++ b/web/css/sharedCSS.css
@@ -1,4 +1,4 @@
-div {border: thin solid black;}
+
 #featured {height: auto}
 img.avatar {}
 
@@ -14,5 +14,6 @@ li {display: flex !important; align-items: center; justify-content: flex-start}
 .list-group-item-heading {display: flex; justify-content: space-between;
             font-weight: bold}
 span.badge {float: right}
-div.divli {width:100%; border: none}
+div.divli {width:100%; border:none}
 div.resultcol {border: none}
+.user {background-color: red}
