--- a/app/Resources/views/pages/events.html.twig
+++ b/app/Resources/views/pages/events.html.twig
@@ -14,7 +14,7 @@
                     <dt>Date:</dt>
                     <dl>{{mainevent.date|date('d/m/Y')}}</dl>
                 </dl>
-                <a href="" class='btn btn-success' role='button'>Participer</a>
+                <a href="{{path('inscription',{'meetingName': mainevent.name})}}" class='btn btn-success' role='button'>Participer</a>
             </div>        
             </div>
             <div class="col-xs-6 col-sm-5 col-lg-3 text-center">
