update lundi 24/07/17: formulaire d'ajout d'event en cours, gestion d'ajout des points terminée.

--- a/app/Resources/views/admin/eventCenter.html.twig
+++ b/app/Resources/views/admin/eventCenter.html.twig
@@ -13,7 +13,7 @@
         {% endfor %}
         <div class="well col-xs-12 col-sm-6 col-md-4 adminEvent">
                 <h3>Add Event</h3>
-                <a class="" href="#"><img class="img-rounded img-responsive" src="http://via.placeholder.com/250x200" alt="event image"></a>
+                <a class="" href="{{path('newEvent')}}"><img class="img-rounded img-responsive" src="http://via.placeholder.com/250x200" alt="event image"></a>
             </div>
     </div>
     
