--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -41,7 +41,7 @@
                                 {% endfor %}
                                 {% endif %}
                                 {% if is_granted('ROLE_ADMIN') %}
-                                <li><a href="">Manage Events</a></li>
+                                <li><a href="{{path('controlCenter')}}">Manage Events</a></li>
                                 {% endif %}
                             </ul>
                       </li>       
