--- a/app/Resources/views/pages/events.html.twig
+++ b/app/Resources/views/pages/events.html.twig
@@ -16,11 +16,12 @@
                 </dl>
                     {% if "now"|date("d/m/Y") < mainevent.date|date("d/m/Y") %}
                 <a href="{{path('inscription',{'meetingName': mainevent.name})}}" class='btn btn-success btn-lg' role='button'>Participer</a>
-                {% endif %}
+                
                 {% if is_granted('ROLE_ADMIN') %}
-                    <a href="#" class="btn btn-primary" role="button">Resultats</a>
+                    <a href="{{path('setResults',{'meetingName': mainevent.name})}}" class="btn btn-primary" role="button">setResults</a>
                     <a href="#" class="btn btn-danger disabled" role="button">Supprimer</a>                   
                 {% endif%}    
+                {% endif %}
             </div>        
             </div>
             <div class="col-xs-6 col-sm-5 col-lg-3 text-center">
