Update du 25/07: projet pratiquement fini.

--- a/app/Resources/views/admin/eventCenter.html.twig
+++ b/app/Resources/views/admin/eventCenter.html.twig
@@ -7,7 +7,7 @@
             
             <div class="well col-xs-12 col-sm-6 col-md-4 adminEvent">
                 <h3>{{event.name}}</h3>
-                <a class="" href="{{path('adminEvent', {'meetingName': event.name}) }}"><img class="img-rounded img-responsive" src="http://via.placeholder.com/250x200" alt="event image"></a>
+                <a class="" href="{{path('event', {'meetingName': event.name}) }}"><img class="img-rounded img-responsive" src="http://via.placeholder.com/250x200" alt="event image"></a>
             </div>
             
         {% endfor %}
