--- a/app/Resources/views/admin/newEvent.html.twig
+++ b/app/Resources/views/admin/newEvent.html.twig
@@ -5,74 +5,11 @@
             <div class="col-xs-12">
                 <h1>Create new Event</h1>
 
-                    {{ form_start(form, {'method': 'post', 'action': path('controlCenter')}) }}
+                    {{ form_start(form, {'method': 'post', 'action': path('newEvent')}) }}
 
                         {{ form_row(form.name) }}
                         {{ form_row(form.description) }}
-                        {{ form_row(form.d
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-ate) }}
+                        {{ form_row(form.date) }}
                         {{ form_row(form.save) }}
                         
                     {{ form_end(form) }}
