--- a/app/Resources/views/pages/results.html.twig
+++ b/app/Resources/views/pages/results.html.twig
@@ -39,14 +39,16 @@
                     <ul class="list-group">
                         <li class="resultli list-group-item-heading">Coureur<span class="badge">points</span></li>
                         {% for resultat in results %}
-                            
+                                {% if app.user is not null %}
                                 {% if app.user.athlete.firstname == resultat.firstname %}
                                 <li class="row resultli user list-group-item justify-content-between"><div class="divli ">{{resultat.firstname|title}}
                                         <span class="badge">{% if resultat.total is null%}NotRanYet{% else %}{{resultat.total}}{% endif %}</span></div></li>
                                 {% else %}
                                 <li class="row resultli list-group-item justify-content-between"><div class="divli ">{{resultat.firstname|title}}<span class="badge">{{resultat.total}}</span></div></li>
                                 {% endif %}
-                            
+                                {% else %}
+                                <li class="row resultli list-group-item justify-content-between"><div class="divli ">{{resultat.firstname|title}}<span class="badge">{{resultat.total}}</span></div></li>
+                        {% endif %}
                         {%endfor%}
                     </ul>
                     
